[project]
name = "paper-pipeline"
version = "0.4.0"
description = "论文处理流水线：支持 arXiv / PDF 的解析、翻译与格式化"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
paper-pipeline = "paper_pipeline.cli:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["paper_pipeline*"]
